[package]
name = "bevy-3d"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "spatial_hash_grid"
harness = false

[dependencies]
bevy = "0.8.0"
bevy-inspector-egui = "0.12.1"
bevy_egui = "0.16.0"
bracket-noise = "0.8.2"
dashmap = "5.3.4"
futures-lite = "1.12.0"
noise = "0.7.0"
splines = "4.1.1"
tap = "1.0.1"

[dev-dependencies]
criterion = "0.3.6"
