[package]
name = "bevy-3d"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10" }
bevy-inspector-egui = "0.18"
bevy_egui = "0.20"
dashmap = "5.3.4"
futures-lite = "1.12.0"
noise = "0.8.2"
tap = "1.0.1"

[dev-dependencies]
criterion = "0.3.6"
