[package]
name = "bevy-3d"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12", features = ["file_watcher"]}
bevy-inspector-egui = "0.21"
bevy_atmosphere = "0.8"
bevy_egui = "0.24"
bevy_rapier3d = { version = "0.23.0", features = ["debug-render-3d"] }
dashmap = "5.3.4"
futures-lite = "1.12.0"
noise = "0.8.2"
tap = "1.0.1"

[dev-dependencies]
criterion = "0.3.6"
